--- a/assets/css/onboard.scss
+++ b/assets/css/onboard.scss
@@ -18,7 +18,7 @@ body {
   color: $color-celestia-mane-paleblue;
   background-color: $color-luna-coat-nmm;
   font-family: $font-default;
-  font-size: normal;
+  font-size: 14px;
   
   width: 618;
   height: 390;
